--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TareasPendientes"></activity>
+        <activity android:name=".TareasPendientes"
+            android:configChanges="uiMode">
+        </activity>
         <activity android:name=".AgregarUsuario"></activity>
         <activity android:name=".AgregarNuevaTarea"></activity>
         <activity android:name=".MainActivity">
